fix slight error with errors not displaying

--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -58,9 +58,9 @@
 		modal
 		style="max-height:600px;overflow:scroll;">
 		<center>
-			<h2 style="color:red">Error: {{errorNumber}}</h2>
+			<h2 style="color:red">{{errorNumber}} Error</h2>
 			<br/>
-			<div>{{errorBody}}</div>
+			<h3>{{errorBody}}</h3>
 			<paper-button raised class="create-button">Okay</paper-button>
 		</center>
 	</paper-dialog>
