--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -50,7 +50,7 @@
 		modal
 		style="max-height:600px;">
 		<center>
-			<h2 style="color:red">Error: {{errorNumber}}</h2>
+			<h2 style="color:red">{{errorNumber}} Error</h2>
 			<br/>
 			<h3>{{errorBody}}</h3>
 			<paper-button raised class="edit-button" style="font-size:12pt" dialog-dismiss>Okay</paper-button>
