--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -6,7 +6,7 @@
 				<div class="info-left-container">
 					<h3>Database Information:</h3>
 					<hr/>
-					<b>Database Size:</b> {{database.SIZE}}<br/>
+					<b>Database Size:</b> {{database.SIZE}} MB<br/>
 					<b>Amount Used:</b> <paper-progress value="{{database.CURRENTSIZE}}" max="{{database.SIZE}}"></paper-progress><br/>
 					<b>ID:</b> {{database.ID}}<br/>
 					<b>Last Updated:</b> {{database.UPDATED}}<br/>
