--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -54,7 +54,7 @@
 					<paper-button class="info-button" on-click="showAddDialog" raised>Add User</paper-button><br/>
 					<paper-button class="info-button" on-click="showDeleteDBDialog" raised>Delete Database</paper-button><br/>
 					<paper-button class="info-button" on-click="showDeleteDialog" raised>Delete Users</paper-button><br/>
-					<paper-button class="info-button" on-click="backupDB" raised>Backup Database</paper-button><br/>
+					<paper-button class="info-button" on-click="openBackupDialog" raised>Backup Database</paper-button><br/>
 					<br/>
 					<paper-button class="info-button" on-click="goToList"raised>Back To Databases</paper-button>
 				</div>
@@ -122,6 +122,23 @@
 			</center>
 		</paper-dialog>
 		<paper-dialog
+			id="dbInfoBackupDialog"
+			entry-animation="scale-up-animation"
+			exit-animation="scale-down-animation"
+			modal>
+			<h2>Would you like to request to backup your database?</h2>
+			<paper-button class="info-button" style="float:left;" dialog-dismiss raised>No</paper-button>
+			<paper-button class="info-button" style="float:right;" on-click="backupDB" dialog-confirm raised>Yes</paper-button>
+		</paper-dialog>
+		<paper-dialog
+			id="dbInfoBackupSuccess"
+			entry-animation="scale-up-animation"
+			exit-animation="scale-down-animation"
+			modal>
+			<h2>Your request was successful!</h2>
+			<paper-button class="info-button" style="float:right;"dialog-confirm raised>Great!</paper-button>
+		</paper-dialog>
+		<paper-dialog
 			id="dbInfoErrorDialog"
 			entry-animation="scale-up-animation"
 			exit-animation="scale-down-animation"
@@ -129,7 +146,7 @@
 			style="max-height:600px;">
 			<h2>{{errorNumber}} Error</h2>
 			<h3>{{errorBody}}</h3>
-			<paper-button raised class="info-button">Okay</paper-button>
+			<paper-button raised class="info-button" dialog-confirm>Okay</paper-button>
 		</paper-dialog>
 	</template>
 	<script src="dem-db-info.js"></script>
