missed one for previous error and also css fix

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -141,7 +141,7 @@
 			<center>
 				<h2>Your request was successful!</h2>
 				<br/>
-				<paper-button class="info-button" style="float:right;"dialog-confirm raised>Great!</paper-button>
+				<paper-button class="info-button" dialog-confirm raised>Great!</paper-button>
 			</center>
 		</paper-dialog>
 		<paper-dialog
