--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -91,7 +91,8 @@
 			id="deleteUserDialog"
 			entry-animation="scale-up-animation"
 			exit-animation="scale-down-animation"
-			modal>
+			modal
+			style="width:400px;">
 			<center>
 				<h2>Click To Delete Users</h2>
 				<br/>
