added more descriptive fields

--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -28,7 +28,7 @@
 						<span class="edit-desc">Organization: </span><br/>
 						<span class="edit-desc">Description: </span><br/>
 						<span class="edit-desc">Size: </span><br/>
-						<span class="edit-desc">Owner: </span><br/>
+						<span class="edit-desc">Owner Net Id: </span><br/>
 					</div>
 					<div class="edit-card-right">
 						<input class="edit-input" placeholder="{{database.NAME}}" value="{{inputName::input}}"></input>
