--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -69,12 +69,12 @@
 			modal>
 			<center>
 				<h2>What Type Of User Would You Like To Add?</h2>
-				<h3>Demter User: NetId of user that can manage this database with the demeter system.</h3>
-				<h3>Database User: Access the database through this user but cannot manage it with this system</h3>
+				<h3><b>Demeter User:</b> Add a managing demeter user</h3>
+				<h3><b>Database User:</b> Add a simple database access user</h3>
 			</center>
-			<paper-button class="info-button" style="float:left;" dialog-dismiss raised on-click="showAddDatabaseUserDialog">Add Database User</paper-button>
+			<paper-button class="info-button" style="float:left;" dialog-dismiss raised on-click="showAddDatabaseUserDialog">Database User</paper-button>
 			<paper-button class="info-button" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
-			<paper-button class="info-button" style="float:right;" dialog-confirm raised on-click="showDemeterDialog">Add Demeter Users</paper-button>
+			<paper-button class="info-button" style="float:right;" dialog-confirm raised on-click="showDemeterDialog">Demeter User</paper-button>
 		</paper-dialog>
 		<paper-dialog
 			id="dbInfoAddDemeterUser"
