--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -72,8 +72,8 @@
 				<h3><b style="font-size:12pt;">Demeter User:</b> Add a managing demeter user</h3>
 				<h3><b style="font-size:12pt;">Database User:</b> Add a simple database access user</h3>
 			</center>
-			<paper-button class="info-button" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
-			<paper-button class="info-button" style="margin:auto" dialog-dismiss raised on-click="showAddDatabaseUserDialog">Database User</paper-button>
+			<paper-button class="info-button" style="float:left;margin-right:20px;" dialog-dismiss raised>Cancel</paper-button>
+			<paper-button class="info-button" style="float:right" dialog-dismiss raised on-click="showAddDatabaseUserDialog">Database User</paper-button>
 			<paper-button class="info-button" style="float:right;" dialog-confirm raised on-click="showDemeterDialog">Demeter User</paper-button>
 		</paper-dialog>
 		<paper-dialog
