--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -72,9 +72,9 @@
 				<h3><b style="font-size:12pt;">Demeter User:</b> Add a managing demeter user</h3>
 				<h3><b style="font-size:12pt;">Database User:</b> Add a simple database access user</h3>
 			</center>
-			<paper-button class="info-button" style="float:left;margin-right:20px;" dialog-dismiss raised>Cancel</paper-button>
-			<paper-button class="info-button" style="float:right" dialog-dismiss raised on-click="showAddDatabaseUserDialog">Database User</paper-button>
-			<paper-button class="info-button" style="float:right;" dialog-confirm raised on-click="showDemeterDialog">Demeter User</paper-button>
+			<paper-button class="info-button-modal" style="float:left;margin-right:20px;" dialog-dismiss raised>Cancel</paper-button>
+			<paper-button class="info-button-modal" style="float:right" dialog-dismiss raised on-click="showAddDatabaseUserDialog">Database User</paper-button>
+			<paper-button class="info-button-modal" style="float:right;" dialog-confirm raised on-click="showDemeterDialog">Demeter User</paper-button>
 		</paper-dialog>
 		<paper-dialog
 			id="dbInfoAddDemeterUser"
@@ -85,8 +85,8 @@
 				<h3>Allow Demeter Access From The Following User:</h3>
 				<input type="text" class="info-dialog-input" placeholder="NetId" value="{{username::input}}"></input><br/>
 			</center>
-			<paper-button class="info-button" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
-			<paper-button class="info-button" style="float:right;"dialog-confirm raised>Add Demeter Users</paper-button>
+			<paper-button class="info-button-modal" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
+			<paper-button class="info-button-modal" style="float:right;"dialog-confirm raised>Add Demeter Users</paper-button>
 		</paper-dialog>
 		<paper-dialog
 			id="deleteDatabaseDialog"
@@ -97,8 +97,8 @@
 				<h2 style="color:red;">Warning: You are about to delete your database</h2>
 				<h3>This will remove all information related to your database including users. Continue?</h3>
 				<br/>
-				<paper-button class="info-button" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
-				<paper-button class="info-button" style="float:right;" on-click="deleteDatabaseAjax" dialog-confirm raised>Continue</paper-button>
+				<paper-button class="info-button-modal" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
+				<paper-button class="info-button-modal" style="float:right;" on-click="deleteDatabaseAjax" dialog-confirm raised>Continue</paper-button>
 			</center>
 		</paper-dialog>
 		<paper-dialog
@@ -111,8 +111,8 @@
 				<h3>Selected User: {{selectedUser.name}}</h3>
 				<br/>
 				<input type="password" class="info-dialog-input" placeholder="New Password" value="{{password::input}}"></input><br/><br/>
-				<paper-button class="info-button" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
-				<paper-button class="info-button" style="float:right;" on-click="changeInstanceUserPassword" dialog-confirm raised>Submit</paper-button>
+				<paper-button class="info-button-modal" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
+				<paper-button class="info-button-modal" style="float:right;" on-click="changeInstanceUserPassword" dialog-confirm raised>Submit</paper-button>
 			</center>
 		</paper-dialog>
 		<paper-dialog
@@ -132,7 +132,7 @@
 					</template>
 				</div>
 				<br/><br/>
-				<paper-button class="info-button" raised dialog-confirm>Done</paper-button>
+				<paper-button class="info-button-modal" raised dialog-confirm>Done</paper-button>
 			</center>
 			</paper-dialog>
 		</paper-dialog>
@@ -146,8 +146,8 @@
 				<h3>Please fill out all the following fields</h3>
 				<input type="text" class="info-dialog-input" placeholder="Username" value="{{username::input}}"></input><br/><br/>
 				<input type="password" class="info-dialog-input" placeholder="Password" value="{{password::input}}"></input><br/><br/>
-				<paper-button class="info-button" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
-				<paper-button class="info-button" style="float:right;" on-click="addUserAjax" dialog-confirm raised>Continue</paper-button>
+				<paper-button class="info-button-modal" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
+				<paper-button class="info-button-modal" style="float:right;" on-click="addUserAjax" dialog-confirm raised>Continue</paper-button>
 			</center>
 		</paper-dialog>
 		<paper-dialog
@@ -159,8 +159,8 @@
 				<h2>Would you like to request to backup your database?</h2>
 				<br/>
 			</center>
-			<paper-button class="info-button" style="float:left;" dialog-dismiss raised>No</paper-button>
-			<paper-button class="info-button" style="float:right;" on-click="backupDB" dialog-confirm raised>Yes</paper-button>
+			<paper-button class="info-button-modal" style="float:left;" dialog-dismiss raised>No</paper-button>
+			<paper-button class="info-button-modal" style="float:right;" on-click="backupDB" dialog-confirm raised>Yes</paper-button>
 		</paper-dialog>
 		<paper-dialog
 			id="dbInfoBackupSuccess"
@@ -170,7 +170,7 @@
 			<center>
 				<h2>Your request was successful!</h2>
 				<br/>
-				<paper-button class="info-button" dialog-confirm raised>Great!</paper-button>
+				<paper-button class="info-button-modal" dialog-confirm raised>Great!</paper-button>
 			</center>
 		</paper-dialog>
 		<paper-dialog
@@ -182,7 +182,7 @@
 			<center>
 				<h2>{{errorNumber}} Error</h2>
 				<h3>{{errorBody}}</h3>
-				<paper-button raised class="info-button" dialog-confirm>Okay</paper-button>
+				<paper-button raised class="info-button-modal" dialog-confirm>Okay</paper-button>
 			</center>
 		</paper-dialog>
 	</template>
