--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -43,7 +43,7 @@
 						<br/>
 					</template>
 					<br/>
-					<h3>Allowed Demeter Users:</h3><br/>
+					<span "font-style:bold;">Allowed Demeter Users:</span><br/>
 					<hr/>
 					<template is="dom-repeat" items="{{database.DEMUSERS}}" as="user">
 						<div class="info-right-container" style="line-height:35px;">
