--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -43,7 +43,7 @@
 						<br/>
 					</template>
 					<br/>
-					<b>Allowed Demeter Users:</b><br/>
+					<b style="font-size:14pt;">Allowed Demeter Users:</b><br/>
 					<hr/>
 					<template is="dom-repeat" items="{{database.DEMUSERS}}" as="user">
 						<div class="info-right-container" style="line-height:35px;">
