--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -82,7 +82,8 @@
 			exit-animation="scale-down-animation"
 			modal>
 			<center>
-				<h3>Allow Demeter Access From The Following User:</h3>
+				<h3>Allow Demeter Access For The Following User:</h3>
+				<br/>
 				<input type="text" class="info-dialog-input" placeholder="NetId" value="{{username::input}}"></input><br/>
 			</center>
 			<paper-button class="info-button-modal" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
@@ -147,7 +148,7 @@
 				<input type="text" class="info-dialog-input" placeholder="Username" value="{{username::input}}"></input><br/><br/>
 				<input type="password" class="info-dialog-input" placeholder="Password" value="{{password::input}}"></input><br/><br/>
 				<paper-button class="info-button" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
-				<paper-button class="info-button" style="float:right;" on-click="addUserAjax" dialog-confirm raised>Continue</paper-button>
+				<paper-button class="info-button" style="float:right;" on-click="addUserAjax" dialog-confirm raised>Add User</paper-button>
 			</center>
 		</paper-dialog>
 		<paper-dialog
