--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -87,7 +87,7 @@
 				<input type="text" class="info-dialog-input" placeholder="NetId" value="{{username::input}}"></input><br/>
 			</center>
 			<paper-button class="info-button-modal" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
-			<paper-button class="info-button-modal" style="float:right;"dialog-confirm raised>Add Manager</paper-button>
+			<paper-button class="info-button-modal" style="float:right;" on-click="addDemeterUser" dialog-confirm raised>Add Manager</paper-button>
 		</paper-dialog>
 		<paper-dialog
 			id="deleteDatabaseDialog"
