update the fields

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -47,7 +47,7 @@
 					<hr/>
 					<template is="dom-repeat" items="{{database.DEMUSERS}}" as="user">
 						<div class="info-right-container" style="line-height:35px;">
-						{{user.name}}<br/>
+						{{user.netId}}<br/>
 						</div>
 					</template>
 				</div>
