--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -48,7 +48,7 @@
 					<template is="dom-repeat" items="{{database.DEMUSERS}}" as="user">
 						<div class="info-right-container" style="line-height:35px;">
 						{{user.netId}}<br/>
-						</div>
+						</div><br/>
 					</template>
 				</div>
 				<div id="infoButtonContainer" class="info-button-container">
