more descriptive buttons

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -58,7 +58,7 @@
 					<paper-button class="info-button" on-click="goToEdit" raised>Edit Database</paper-button><br/>
 					<paper-button class="info-button" on-click="showAddUserDialog" raised>Add User</paper-button><br/>
 					<paper-button class="info-button" on-click="showDeleteDBDialog" raised>Delete Database</paper-button><br/>
-					<paper-button class="info-button" on-click="showDeleteDialog" raised>Delete Users</paper-button><br/>
+					<paper-button class="info-button" on-click="showDeleteDialog" raised>Delete DB Users</paper-button><br/>
 					<paper-button class="info-button" on-click="openBackupDialog" raised>Backup Database</paper-button><br/>
 					<br/>
 					<paper-button class="info-button" on-click="goToList"raised>Back To Databases</paper-button>
