--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -75,8 +75,9 @@
 				<h3>{{selectedUser}}</h3>
 				<h2>Do you want to continue?</h2>
 			</center>
+			<br/>
 			<paper-button raised class="info-button-modal" style="float:left" dialog-dismiss>Cancel</paper-button>
-			<paper-button raised class="info-button-modal" style="float:right" on-click="deleteManager" dialog-dismiss>Cancel</paper-button>
+			<paper-button raised class="info-button-modal" style="float:right" on-click="deleteManager" dialog-dismiss>Continue</paper-button>
 		</paper-dialog>
 		<paper-dialog
 			id="dbInfoAddUserDialog"
