--- a/index.html
+++ b/index.html
@@ -19,30 +19,30 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <p>This system was developed by: David Christofferson, Wesley Haws, Robert Jackson, Andres Martenson, and Mario Valencia.</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>The purpose of this system is to remove the burden of database upkeep from end users. It is designed so the system is hosted by those in your organization that are database experts. They retain root access to databases and are responsible for keeping databases backed up and running correctly. Users of the system access it through the Web Interface. From there they can perform CRUD operations on both databases that belong to them and database users. The system also provides for easy password resetting, should it be needed. This ensures end users are never locked out of their database.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>The system works with remote or local database VMs. It is designed to also work with Docker containers or databases sitting directly on VMs.</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Currently this repository contains all of the information that you would need to deploy this onto your middleware machine. This machine will be in charge of serving requests to its web interface and storing those request in it's MySQL database. It also has a communication channel setup to communicate with VMs (Where the actual databases will be stored), which is installed locally on each database VM. The VM code makes use of SALT, ZMQ, and Docker when needed.</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<h2>
+<a id="documentation-paths" class="anchor" href="#documentation-paths" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation Paths</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p><a href="/laravel/public">Front End Code and Documentation</a></p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p><a href="/laravel/app/Http/Controllers">Middleware Controllers</a></p>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><a href="/laravel/app/Http/routes.php">Routing For Controllers</a></p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p><a href="/laravel/app/Console/Commands/redisListener.php">Middleware Listener</a></p>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p><a href="/laravel/app/Jobs/handleVmRequest.php">Middleware Queue Handler</a></p>
+
+<p><a href="/laravel/app/Http/Middleware/RequestLogger.php">Simple Logger</a></p>
+
+<p><a href="/laravel/resources/views/errors/500.blade.php">Error Page</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/DCUnit711/Demeter">Demeter</a> is maintained by <a href="https://github.com/DCUnit711">DCUnit711</a>.</span>
